[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/stat_display/BlockStatDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/ui/left_arrow_button.png" type="Texture" id=3]
[ext_resource path="res://resources/frames/ArcherFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://images/ui/right_arrow_button.png" type="Texture" id=5]
[ext_resource path="res://images/ui/enter_dungeon_button.png" type="Texture" id=6]
[ext_resource path="res://screens/party_management/PartyManagement.gd" type="Script" id=7]

[node name="PartyManagement" type="Control"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_right = 64.0
margin_bottom = 64.0
theme = ExtResource( 1 )

[node name="UnitDisplay" type="AnimatedSprite" parent="Panel"]
position = Vector2( 34, 11 )
scale = Vector2( 2, 2 )
frames = ExtResource( 4 )
frame = 5
playing = true

[node name="BlockStatDisplay" parent="Panel" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 22.0
margin_right = -16.0
margin_bottom = -24.0

[node name="LeftButton" type="TextureButton" parent="Panel"]
margin_left = 14.0
margin_top = 8.0
margin_right = 22.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )

[node name="RightButton" type="TextureButton" parent="Panel"]
margin_left = 45.0
margin_top = 8.0
margin_right = 53.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )

[node name="EnterDungeonButton" type="TextureButton" parent="Panel"]
margin_left = 17.0
margin_top = 53.0
margin_right = 49.0
margin_bottom = 61.0
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="Panel/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Panel/RightButton" to="." method="_on_RightButton_pressed"]
